# autorest.cpp

./: .npmignore  README.md  autorest.cpp.sln  package.json
.gulp/: common.iced  dotnet.iced  gulpfile.iced
src/: .editorconfig  ClientModelExtensions.cs  CodeGeneratorCpp.cs  CodeNamerCpp.cs  GeneratorSettingsCpp.cs  GlobalSuppressions.cs  PluginCpp.cs  Program.cs  SyncMethodsGenerationMode.cs  TransformerCpp.cs  XmlSerialization.cs  autorest.cpp.csproj
src/Model/: CodeModelCpp.cs  CompositeTypeCpp.cs  ControllerToModelBinderMapping.cs  EnumTypeCpp.cs  MethodCpp.cs  MethodGroupCpp.cs  ParameterCpp.cs  PrimaryTypeCpp.cs  PropertyCpp.cs  SequenceTypeCpp.cs
src/Properties/: Resources.Designer.cs
src/Templates/Rest/Client/: AllHeadersTemplate.cshtml  MethodGroupImplTemplate.cshtml  MethodGroupTemplate.cshtml  MethodPrototypeTemplate.cshtml  MethodTemplate.cshtml  ServiceClientBodyTemplate.cshtml  ServiceClientImplTemplate.cshtml  ServiceClientTemplate.cshtml  XmlSerializationTemplate.cshtml
src/Templates/Rest/Common/: EnumTemplate.cshtml  ExceptionTemplate.cshtml  ExtensionMethodTemplate.cshtml  ExtensionsTemplate.cshtml  ModelImplTemplate.cshtml  ModelTemplate.cshtml
src/Templates/Rest/Server/: ServiceControllerTemplate.cshtml  ServiceMethodTemplate.cshtml
test/: CMakeLists.txt  generate.cmd
test/src/: advisor_test.cpp  analysisservices_test.cpp  appinsights_test.cpp  authorization_test.cpp  automation_test.cpp  batch_test.cpp  blob_test.cpp  cdn_test.cpp  compositeApiManagement_test.cpp  documentdb_test.cpp  iothub_test.cpp  keyvault_test.cpp  logic_test.cpp  mach_test.cpp  petstore_test.cpp  storage_test.cpp
